Update fonts and configs

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              365 Days of Code
 email:              dataandstuff.blog@gmail.com
-description:        An Initiative to 
+description:        Growing as a Coder, One Day at a time
 author:             Start Bootstrap
 baseurl:            "/365daysofcode"
 url:                "https://chrischow.github.io/365daysofcode"
