--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              365 Days of Code
 email:              dataandstuff.blog@gmail.com
 description:        Growing as a Coder, One Day at a time
-author:             Start Bootstrap
+author:             Christian Chow
 baseurl:            "/365daysofcode"
 url:                "https://chrischow.github.io/365daysofcode"
 
