--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title:              365 Days of Code
+title:              365 Days of Data Science
 email:              dataandstuff.blog@gmail.com
-description:        Growing as a Coder, One Day at a time
+description:        Growing as a Data Scientist, One Day at a time
 author:             Christian Chow
 baseurl:            "/365daysofcode"
-url:                "https://chrischow.github.io/365daysofcode"
+url:                "https://chrischow.github.io/365daysofdatascience"
 
 # Social Profiles
 # twitter_username:   SBootstrap
-# github_username:    StartBootstrap
+github_username:    chrischow
 # facebook_username:  StartBootstrap
 # instagram_username:  
 linkedin_username: christian-chow
