--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              365 Days of Data Science
 email:              dataandstuff.blog@gmail.com
-description:        Growing as a Data Scientist, One Day at a time
+description:        Growing as a Data Scientist, One Day at a Time
 author:             Christian Chow
 baseurl:            "/365daysofdatascience"
 url:                "https://chrischow.github.io/365daysofdatascience"
